--- a/frontend/src/sass/posts.scss
+++ b/frontend/src/sass/posts.scss
@@ -4,16 +4,10 @@
 			display: flex;
 
 			.section-2 {
-				min-width: 510px;
-				width: 510px;
+				max-width: 700px;
+				width: 100%;
 				background: #fff;
-				margin: 0 1rem;
-				border: 1px solid #e6ecf0;
-			}
-
-			.section-1 {
-				background: goldenrod;
-				flex: 1;
+				margin-right: 1rem;
 				border: 1px solid #e6ecf0;
 			}
 
