minor update to post

--- a/frontend/src/sass/post-item.scss
+++ b/frontend/src/sass/post-item.scss
@@ -63,7 +63,7 @@
 						padding: .5rem 1rem;
 						border: 0;
 						cursor: pointer;
-						border-radius: 20px;
+						border-radius: 5px;
 						line-height: 1.5;
 						letter-spacing: .03rem;
 					}
@@ -75,21 +75,15 @@
 					justify-content: center;
 					align-items: center;
 					background: #fff;
-					text-transform: uppercase;
+					text-transform: capitalize;
 					cursor: pointer;
 					border-radius: 20px;
 					line-height: 1.5;
 					letter-spacing: .03rem;
-					.comment {
-						width: 17px;
-						height: 17px;
-						color: #999;
-						cursor: pointer;
-					}
 
 					span {
-						color: #999;
-						font-weight: 600;
+						color: rgb(128, 125, 125);
+						font-weight: 500;
 						font-size: .8rem;
 						margin-left: .5rem;
 					}
