--- a/frontend/src/sass/posts.scss
+++ b/frontend/src/sass/posts.scss
@@ -1,10 +1,11 @@
 .posts-section {
 	.posts-center {
 		.posts-container {
-			display: flex;
+      display: flex;
+      justify-content: center;
 
 			.section-2 {
-				max-width: 700px;
+				max-width: 750px;
 				width: 100%;
 				background: #fff;
 				margin-right: 1rem;
