--- a/frontend/src/sass/posts.scss
+++ b/frontend/src/sass/posts.scss
@@ -3,3 +3,73 @@
   background: #fff;
   border: 1px solid #e6ecf0;
 }
+
+.comment-box {
+  text-align: right;
+  padding: 1rem;
+
+  textarea {
+    width: 100%;
+    padding: .9rem;
+    padding-right: 0.9rem;
+    border: 2px solid #3770ff;
+    border-radius: 3px;
+    padding-right: 2.6rem;
+    resize: none;
+  }
+
+  button {
+    margin-top: .7rem;
+    background:#3037ed;
+    color:#fff;
+    font-weight: 700;
+    font-size: .8rem;
+    text-transform: capitalize;
+    padding: .5rem 1rem;
+    border: 0;
+    cursor: pointer;
+    border-radius: 5px;
+    line-height: 1.5;
+    letter-spacing: .03rem;
+  }
+}
+
+.post {
+  width: 100%;
+  background: #fff;
+
+  .message-text {
+    border-bottom: 1px solid #f2f2f3;
+    padding: 1rem;
+  }
+}
+
+.comment {
+  border-bottom: 1px solid #f2f2f3;
+  padding: 1rem;
+
+  .author {
+    color: #677388;
+    font-size: 13px;
+    display: inline-block;
+    line-height: 16px;
+    margin-bottom: 6px;
+  }
+
+  .message {
+    white-space: pre-line;
+    word-wrap: break-word;
+    font-size: 16px;
+    line-height: 22px;
+    margin-bottom: 6px;
+
+  }
+
+  .created-at {
+    color: #677388;
+    font-size: 13px;
+    display: inline-block;
+    line-height: 16px;
+    margin-bottom: 6px;
+  }
+}
