--- a/frontend/src/sass/post-item.scss
+++ b/frontend/src/sass/post-item.scss
@@ -40,7 +40,7 @@
   color: #fff;
   font-weight: 700;
   font-size: .8rem;
-  text-transform: uppercase;
+  text-transform: capitalize;
   padding: .5rem 1rem;
   border: 0;
   cursor: pointer;
