--- a/frontend/src/sass/post-item.scss
+++ b/frontend/src/sass/post-item.scss
@@ -20,7 +20,9 @@
 			.post-text {
 				padding: .7rem 0;
 				display: inline-block;
-				width: 100%;
+        width: 100%;
+        white-space: pre-line;
+        word-wrap: break-word;
 			}
 
 			.post-action {
