--- a/frontend/src/sass/TextBox.scss
+++ b/frontend/src/sass/TextBox.scss
@@ -14,7 +14,6 @@
 			width: 100%;
 
 			.dummyTextContainer {
-				background: #fff;
 				background: #eaebfd;
 				padding: 10px;
 				align-items: flex-start;
@@ -24,9 +23,9 @@
 				border-radius: 3px;
 				cursor: pointer;
 				p {
-					font-size: .9rem;
-          color: #999;
-          font-weight: 600;
+					font-size: 13px;
+          color: #888;
+          font-weight: 500;
 				}
 			}
 
