--- a/frontend/src/sass/layout.scss
+++ b/frontend/src/sass/layout.scss
@@ -13,7 +13,7 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	background: #f2f2f3;
-	font-family: 'Libre Franklin', sans-serif;
+	font-family: system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;
 	position: relative;
 	height: 100%;
 	min-height: 100vh;
